--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </div>
     <div class="content-wrapper">
         <aside class="left-sidebar">
-            <img src="picture5.png" alt="Profile Picture" style="width: 80%; border-radius: 50%;">
+            <img src="picture5.png" alt="Profile Picture" style="width: 50%; border-radius: 50%;">
             <h1>Pengfei Zhu
 <br>
 <br>
@@ -185,6 +185,10 @@ Now I am working with <strong> Prof. <a href="https://iid.ulaval.ca/en/members/x
                     Your browser does not support the video tag.
                 </video>
                 <p>Quantitative Defect Detection</p>
+                <p><strong>B. Residual Stress Measurement</strong></p>
+<img src="picture8.png" alt="Content Image">
+                <p><strong>C. Super-Resolution Imaging</strong></p>
+<img src="picture9.png" alt="Content Image">
             </div>
             <div id="award" class="award-section" style="display:none;">
                 <h2>Awards</h2>
